<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bar Safety</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timeOkayButton">Okay</string>
    <string name="chooseNumberMinutes">Set Finish Time:</string>
    <string name="timeLeftHere">Time Remaining:</string>
    <string name="countdownTime">Time here</string>
    <string name="fineButton">I am fine.</string>
    <string name="statusConfirmText">Time to confirm status:</string>
    <string name="statusConfirmTime">Time Here</string>
    <string name="verifyStuff">Verify Soberness</string>
    <string name="mathQuestion">What is:</string>
    <string name="numberHere">#</string>
    <string name="numberInputted">Number Inputted</string>
    <string name="chooseContacts">Choose Contacts</string>
    <string name="contactChooseOne">1st Contact</string>
    <string name="contactChooseTwo">2nd Contact</string>
    <string name="contactChooseThree">3rd Contact</string>
    <string name="mathEquation">Question Here</string>
    <string name="timeleft2">Time left:</string>
    <string name="countdownTime2">Time Here</string>
    <string-array name="times_array">
        <item>1</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
        <item>360</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="time_button">Timer</string>
</resources>
