<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/blue">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fineButton"
        android:id="@+id/fineButton"
        android:onClick="okaySelected"
        android:textColor="@color/nigga"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statusConfirmText"
        android:id="@+id/statusConfirmText"
        android:textColor="@color/nigga"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/fineButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statusConfirmTime"
        android:id="@+id/statusConfirmTime"
        android:textColor="@color/nigga"
        android:layout_below="@+id/statusConfirmText"
        android:layout_alignRight="@+id/statusConfirmText"
        android:layout_alignEnd="@+id/statusConfirmText" />
</RelativeLayout>
